--- a/sass/style-normal.scss
+++ b/sass/style-normal.scss
@@ -1,3 +1,6 @@
+@import 'vars';
+@import 'mixins';
+
 /*
 	Alpha by HTML5 UP
 	html5up.net | @n33co
@@ -8,4 +11,22 @@
 
 	body, input, select, textarea {
 		font-size: 11pt;
+	}
+
+/* Header */
+
+	.dropotron {
+		&.level-0 {
+			font-size: 1em;
+		}
+	}
+
+/* Banner */
+
+	#banner {
+		background-attachment: scroll;
+
+		h2 {
+			font-size: 3.5em;
+		}
 	}
