--- a/sass/style-wide.scss
+++ b/sass/style-wide.scss
@@ -1,3 +1,6 @@
+@import 'vars';
+@import 'mixins';
+
 /*
 	Alpha by HTML5 UP
 	html5up.net | @n33co
@@ -7,5 +10,11 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 11pt;
+		font-size: 13pt;
+	}
+	
+/* Banner */
+
+	#banner {
+		padding: 10em 0 18em 0;
 	}
