--- a/css/style.css
+++ b/css/style.css
@@ -1368,6 +1368,8 @@
 
 	#cta {
 		background: #e89980;
+/*		background-image: url("../images/rsz_pict01.jpg");
+*/		/*      #f9e5df*/
 		color: #f9e5df;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
@@ -1429,3 +1431,58 @@
 		#cta .formerize-placeholder {
 			color: rgba(255, 255, 255, 0.75) !important;
 		}
+
+
+/* horizontal */
+.horizontal {
+    width: 500px;
+    position: relative;
+    overflow: hidden;
+    margin-left: auto ;
+  	margin-right: auto ;
+}
+.horizontal .items {
+    width: 2000px;
+    -webkit-animation: hscroll 20s infinite;
+    -moz-animation: hscroll 20s infinite;
+    -ms-animation: hscroll 20s infinite;
+    animation: hscroll 20s infinite;
+}
+.horizontal .item {
+    margin: 0;
+    float: left;
+    width: 500px;
+}
+/*
+/* The keyframes calculations are based on assumption of 4 items in the carousel.
+/* You should notice the pattern for your own calculations.
+*/
+@-webkit-keyframes hscroll {
+    0%, 18.75%  { margin-left: 0 }
+    25%, 43.75% { margin-left: -500px; }
+    50%, 68.75% { margin-left: -1000px; }
+    75%, 93.75% { margin-left: -1500px; }
+    100%  { margin-left: 0 }
+}
+@-moz-keyframes hscroll {
+    0%, 18.75%  { margin-left: 0 }
+    25%, 43.75% { margin-left: -500px; }
+    50%, 68.75% { margin-left: -1000px; }
+    75%, 93.75% { margin-left: -1500px; }
+    100%  { margin-left: 0 }
+}
+@-ms-keyframes hscroll {
+    0%, 18.75%  { margin-left: 0 }
+    25%, 43.75% { margin-left: -500px; }
+    50%, 68.75% { margin-left: -1000px; }
+    75%, 93.75% { margin-left: -1500px; }
+    100%  { margin-left: 0 }
+}
+@keyframes hscroll {
+    0%, 18.75%  { margin-left: 0 }
+    25%, 43.75% { margin-left: -500px; }
+    50%, 68.75% { margin-left: -1000px; }
+    75%, 93.75% { margin-left: -1500px; }
+    100%  { margin-left: 0 }
+}
+
