--- a/css/style.css
+++ b/css/style.css
@@ -1443,6 +1443,7 @@
 
 .horizontal {
     width: 300px;
+    height: 400px;
     position: relative;
     overflow: hidden;
     margin-left: auto ;
