--- a/css/style.css
+++ b/css/style.css
@@ -1464,12 +1464,12 @@
     min-height: 5%;
 }
 
-/*.pdf {
+.pdf {
 	width: 850px;
 	height: 1100px;
 	margin-left: auto ;
 	margin-right: auto ;
-}*/
+}
 
 /*
 /* The keyframes calculations are based on assumption of 4 items in the carousel.
