--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
-@import url("http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic");
-@import url("http://fonts.googleapis.com/css?family=Poiret+One");
+
 @import url("http://fonts.googleapis.com/css?family=Raleway:300");
 
 /* Basic */
@@ -1432,9 +1430,15 @@
 			color: rgba(255, 255, 255, 0.75) !important;
 		}
 
+		#cta .container { 
+			margin-right: 4.5%;
+
+		}
+
+
 
 /* horizontal */
-.view {
+/*.view {
     position: relative;
     overflow: hidden;
     margin-left: auto ;
@@ -1471,7 +1475,7 @@
 	text-align: center;
 	margin-left: auto ;
 	margin-right: auto ;
-}
+}*/
 
 /*
 /* The keyframes calculations are based on assumption of 4 items in the carousel.
@@ -1506,7 +1510,7 @@
     100%  { margin-left: 0 }
 }
 */
-@-webkit-keyframes hscroll {
+/*@-webkit-keyframes hscroll {
     0%, 9.375%  { margin-left: 0 }
     12.5%, 21.875% { margin-left: -300px; }
     25%, 34.375% { margin-left: -600px; }
@@ -1550,6 +1554,30 @@
     87.5%, 96.875% { margin-left: -2100px; }
     100%  { margin-left: 0 }
 }
+*/
 
+.carousel .item {
+    background-color: #000;
+    width:100%;
+}
 
+.carousel .loading{
+    width:20px;
+    height:20px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    background:#000 url(../images/ajax-loader.gif) no-repeat center center;
+    margin:-23px 0px 0px -23px;
+    z-index:100;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    opacity:0.7;
+}
+
+.slide {
+	width:550px;
+	
+}
 
