--- a/css/style.css
+++ b/css/style.css
@@ -1217,7 +1217,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../images/banner.jpg");
+		background-image: url("images/overlay.jpg"), url("../images/banner.jpg");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
@@ -1431,7 +1431,7 @@
 		}
 
 		#cta .container { 
-			margin-right: 0%;
+			margin-right: 1%;
 
 		}
 
@@ -1577,7 +1577,7 @@
 }
 
 .slide {
-	width:350px;
+	width:450px;
 	
 }
 
