--- a/css/style.css
+++ b/css/style.css
@@ -1431,7 +1431,7 @@
 		}
 
 		#cta .container { 
-			margin-right: 0%;
+			margin-right: 1%;
 
 		}
 
@@ -1559,9 +1559,12 @@
 .carousel .item {
     background-color: #000;
     width:100%;
+    min-width: 5%;
+    min-height:5%;
 }
 
-.carousel .loading{
+
+/*.carousel .loading{
     width:20px;
     height:20px;
     position:absolute;
@@ -1574,10 +1577,11 @@
     -webkit-border-radius: 10px;
     border-radius: 10px;
     opacity:0.7;
-}
+}*/
 
 .slide {
 	width:400px;
-	
+	position: relative;
+
 }
 
