--- a/css/style.css
+++ b/css/style.css
@@ -1430,10 +1430,10 @@
 			color: rgba(255, 255, 255, 0.75) !important;
 		}
 
-		#cta .container { 
+/*		#cta .container { 
 			margin-right: 1%;
 
-		}
+		}*/
 
 
 
