--- a/css/style.css
+++ b/css/style.css
@@ -1027,6 +1027,65 @@
 			opacity: 0.25;
 		}
 
+
+/*----- Accordion -----*/
+.accordion, .accordion * {
+    -webkit-box-sizing:border-box; 
+    -moz-box-sizing:border-box; 
+    box-sizing:border-box;
+}
+ 
+.accordion {
+    overflow:hidden;
+    /*box-shadow:0px 1px 3px rgba(0,0,0,0.25);*/
+    border-radius:30px;
+    background: rgba(250, 250, 250, 0.2);
+
+    /*box-shadow: inset 0 0 0 2px #e5e5e5;*/
+    box-shadow: rgba(250, 250, 250, 0.5);
+    width: 33%;
+    margin-left: auto;
+    margin-right: auto;
+}
+ 
+/*----- Section Titles -----*/
+.accordion-section-title {
+    width:100%;
+    padding:15px;
+    display:inline-block;
+    border-bottom:1px solid #1a1a1a;
+    /*background:#333;*/
+    /*background: rgba(250, 250, 250, 0.15);*/
+    transition:all linear 0.15s;
+    /* Type */
+    font-size:1.200em;
+    text-shadow:0px 1px 0px #1a1a1a;
+    color:#fff;
+}
+ 
+.accordion-section-title.active {
+	background color: transparent;
+    /* Type */
+    text-decoration:none;
+}
+
+.accordion-section-title:hover {
+    background: rgba(250, 250, 250, 0.5);
+    /* Type */
+    text-decoration:none;
+}
+ 
+.accordion-section:last-child .accordion-section-title {
+    border-bottom:none;
+}
+ 
+/*----- Section Content -----*/
+.accordion-section-content {
+    padding:15px;
+    width:100%;
+    display:none;
+}
+
 /* Header */
 
 	#skel-layers-wrapper {
@@ -1284,7 +1343,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../images/banner.jpg");
+		background-image: url("images/overlay.png"), url("../images/testbanner (1).png");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
@@ -1301,8 +1360,10 @@
 			color: #fff;
 		}
 
+
 		#banner h2 {
-			color:#455a64;
+			/*color:#455a64;*/
+			color: #FAFAFA;
 			font-size: 3.5em;
 			line-height: 1em;
 			margin: 0 0 0.5em 0;
@@ -1310,10 +1371,11 @@
 		}
 
 		#banner h6 {
-			color:#455a64;
+			color: #FAFAFA;
 			font-size: 1.25em;
 			margin-bottom: 1.75em;
 		}
+
 
 		#banner p {
 			font-size: 1.25em;
@@ -1351,6 +1413,61 @@
 				background: #fff;
 				color: #666 !important;
 			}
+
+/*----- Accordion -----*/
+ 
+#banner .accordion {
+    overflow:hidden;
+    /*box-shadow:0px 1px 3px rgba(0,0,0,0.25);*/
+    border-radius:30px;
+    background: rgba(255, 87, 54, 0.5);
+    background color: transparent;
+    box-shadow: inset 0 0 0 2px rgba(255, 87, 54, 0.0);
+    width: 33%;
+    margin-left: auto;
+    margin-right: auto;
+}
+ 
+/*----- Section Titles -----*/
+#banner .accordion-section-title {
+    width:100%;
+    padding:30px;
+    display:inline-block;
+    border-bottom:1px solid #ff5722;
+    /*background: rgba(69, 90, 100, 0.85);*/
+    background color: transparent;
+    transition:all linear 0.15s;
+    /* Type */
+    font-size:1.200em;
+    /*text-shadow:0px 1px 0px #1a1a1a;*/
+    color:#fff;
+}
+ 
+#banner .accordion-section-title.active {
+	background: rgba(255, 87, 54, 0.8);
+	box-shadow: inset 0 0 0 2px rgba(255, 87, 54, 0.0);
+
+    /* Type */
+    text-decoration:none;
+}
+
+#banner .accordion-section-title:hover {
+    background: #F44336;
+    /* Type */
+    text-decoration:none;
+}
+ 
+#banner .accordion-section:last-child .accordion-section-title {
+    border-bottom:none;
+}
+ 
+/*----- Section Content -----*/
+#banner .accordion-section-content {
+	background: rgba(120, 144, 156, 0.8);
+    padding:15px;
+    width:100%;
+    display:none;
+}
 
 /* Main */
 
@@ -1435,7 +1552,7 @@
 		background: #e89980;
 		background-attachment: scroll, scroll, scroll, fixed;
 		background-color: #645862;
-		background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/overlay.png"), url("../images/background.jpg");
+		background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/overlay.png"), url("../images/testbanner (2).png");
 		background-position: top left, top right, top left, bottom center;
 		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
 		background-size: 25em, 25em, auto, cover;
@@ -1567,56 +1684,7 @@
   }
 
 
-/*----- Accordion -----*/
-.accordion, .accordion * {
-    -webkit-box-sizing:border-box; 
-    -moz-box-sizing:border-box; 
-    box-sizing:border-box;
-}
- 
-.accordion {
-    overflow:hidden;
-    /*box-shadow:0px 1px 3px rgba(0,0,0,0.25);*/
-    border-radius:3px;
-    background: transparent;
-    background color: transparent;
-    box-shadow: inset 0 0 0 2px #e5e5e5;
-    width: 33%;
-    margin-left: auto;
-    margin-right: auto;
-}
- 
-/*----- Section Titles -----*/
-.accordion-section-title {
-    width:100%;
-    padding:15px;
-    display:inline-block;
-    border-bottom:1px solid #1a1a1a;
-    /*background:#333;*/
-    background color: transparent;
-    transition:all linear 0.15s;
-    /* Type */
-    font-size:1.200em;
-    text-shadow:0px 1px 0px #1a1a1a;
-    color:#fff;
-}
- 
-.accordion-section-title.active, .accordion-section-title:hover {
-    background color: transparent;
-    /* Type */
-    text-decoration:none;
-}
- 
-.accordion-section:last-child .accordion-section-title {
-    border-bottom:none;
-}
- 
-/*----- Section Content -----*/
-.accordion-section-content {
-    padding:15px;
-    width:100%;
-    display:none;
-}
+
 
 /*
 /* The keyframes calculations are based on assumption of 4 items in the carousel.
