--- a/css/style.css
+++ b/css/style.css
@@ -1703,11 +1703,12 @@
 div.centre
 {
   
-  width:600px;
+  width:65%;
   display: block;
-  margin:0px auto;
+  
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 15px;
 }
 
 
